# msgraph_query

./: README.md  auth.py  example_cmd.sh  pyproject.toml  query.sh
