[tool.poetry]
name = "msgraph-token"
version = "0.1.0"
description = ""
authors = ["Caio Benatti Moretti <caiodba@gmail.com>"]
readme = "README.md"
packages = [{include = "msgraph_token"}]

[tool.poetry.dependencies]
python = "^3.10"
msal = "^1.24.0"
selenium = "^4.14.0"
selenium-wire = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
